--- a/IST541/Lab1/index.html
+++ b/IST541/Lab1/index.html
@@ -54,6 +54,7 @@
   .stepDescription {
     background-color: #9db7df; /* Light Blue */
     color: white;
+	  width: 100%;
     padding: 15px 20px;
     font-size: 1.1em;
   }
