--- a/IST541/Lab1/index.html
+++ b/IST541/Lab1/index.html
@@ -7,81 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 <link href="css/jobaid.css" rel="stylesheet">
-<style>
-  body {
-    font-family: "Lexend", sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #f5f5f5;
-  }
 
-  #wrapper {
-    max-width: 1000px;
-    margin: auto;
-    padding: 0;
-  }
-
-  /* Header Banner */
-  #header {
-    background-color: #1e3d6b; /* Dark Blue */
-    color: white;
-    text-align: center;
-    padding: 40px 20px;
-  }
-
-  #header h1 {
-    margin: 0;
-    font-size: 2em;
-  }
-
-  #header h2 {
-    margin-top: 10px;
-    font-weight: 400;
-    font-size: 1.2em;
-    color: #d9e2f3;
-  }
-
-  /* Step Title Banner */
-  .stepTitle {
-    background-color: #5a7dbf; /* Medium Blue */
-    color: white;
-    padding: 15px 20px;
-    font-size: 1.3em;
-    font-weight: bold;
-  }
-
-  /* Step Description Banner */
-  .stepDescription {
-    background-color: #9db7df; /* Light Blue */
-    color: white;
-	width: 100%;
-	display: block;
-    padding: 15px 20px;
-    font-size: 1.1em;
-  }
-
-  /* Step Content Layout */
-  .stepContent {
-    display: flex;
-    flex-wrap: wrap;
-    border: 1px solid #ccc;
-    margin-bottom: 30px;
-  }
-
-  .stepImage {
-    flex: 1;
-    min-width: 250px;
-    background: white;
-    text-align: center;
-    padding: 15px;
-  }
-
-  .stepImage img {
-    max-width: 100%;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-  }
-</style>
 </head>
 
 <body>
@@ -154,6 +80,22 @@
       </div>
     </div>
 
+	   <div id="step6">
+      <div class="stepTitle">Now, Review the Five Steps</div>
+      <div class="stepContent">
+        <div class="stepDescription">
+          <ol>
+    <li>Open HeyGen.</li>
+    <li>Go to “Avatars”.</li>
+    <li>Choose an avatar.</li>
+    <li>Customize voice and gestures.</li>
+    <li>Click Generate.</li>
+  </ol>
+        </div>
+        <div class="stepImage"></div>
+      </div>
+    </div>
+	  
   </div><!--wrapper-->
 </body>
 </html>
