--- a/IST541/Lab1/index.html
+++ b/IST541/Lab1/index.html
@@ -92,7 +92,9 @@
     <li>Click Generate.</li>
   </ol>
         </div>
-        <div class="stepImage"></div>
+        <div class="stepImage">
+          <img src="img/logo.jpg" alt="HeyGen Logo"/>
+        </div>
       </div>
     </div>
 	  
