--- a/IST541/Lab2/index.html
+++ b/IST541/Lab2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Lab 1: Job Aid</title>
+<title>Lab 2: Chunking Content in a Job Aid</title>
 			
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 rel="stylesheet">
