New Logo Update

--- a/IST541/Lab2/index.html
+++ b/IST541/Lab2/index.html
@@ -126,7 +126,7 @@ rel="stylesheet">
 						
         </div>
         <div class="stepImage">
-          <img src="img/logo.jpg" alt="HeyGen Logo"/>
+          <img src="img/HeyGen_Logo_Prism_Black.svg" alt="HeyGen Logo"/>
         </div>
       </div>
     </details>
