--- a/IST541/Lab2/index.html
+++ b/IST541/Lab2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Lab 2: Chunking Content in a Job Aid</title>
+<title>Lab 2: Chunking Content in a Job Aid with <strong>HeyGen</strong></title>
 			
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 rel="stylesheet">
@@ -17,20 +17,20 @@ rel="stylesheet">
   <div id="wrapper">
 
     <div id="header">
-      <h1>How to Create an Avatar in HeyGen</h1>
+      <h1>How to Create an Avatar in <strong>HeyGen</strong></h1>
       <h2>By Ross Hayduk</h2>
     </div>
 
     <details open>
-      <summary class="stepTitle">Step 1: Open HeyGen</summary>
+      <summary class="stepTitle">Step 1: Open  <strong>HeyGen</strong></summary>
       <div class="stepContent">
         <div class="stepDescription">
           Go to <a href="https://www.heygen.com" target="_blank" style="color:#fff; text-decoration: underline;">HeyGen.com</a> 
-          and log in with your account. If you don’t have one, sign up for free to get started.
+          and log in with your account. If you <strong>don't</strong> have one, sign up for  <strong>FREE</strong> to get started.
 			
 			<p class="warning">
 			<span class="material-icons">flag</span>
-			Note:  Free accounts have limited capabilities.
+			Note:  Free accounts have <strong>limited</strong> capabilities.
 			</p>
 			
         </div>
@@ -44,11 +44,11 @@ rel="stylesheet">
 	<summary class="stepTitle">Step 2: Navigate to Avatar Creation</summary>
       <div class="stepContent">
         <div class="stepDescription">
-          Once logged in, click on the “Avatars” tab in the main menu. This will take you to the avatar creation dashboard.
+          Once logged in, click on the  <strong>Avatars</strong> tab in the main menu. This will take you to the avatar creation dashboard.
 			
 			<p class="warning">
 			<span class="material-icons">flag</span>
-			Observe how many different types of avatars are available, from UGC (User Generated Content) to Pixar Studios-style avatars.
+			Observe how many  <strong>different</strong> types of avatars are available, from UGC (User Generated Content) to Pixar Studios-style avatars.
 			</p>
 
         </div>
@@ -62,11 +62,11 @@ rel="stylesheet">
       <summary class="stepTitle">Step 3: Choose Your Avatar Type</summary>
       <div class="stepContent">
         <div class="stepDescription">
-          You can select from stock avatars or create a custom avatar. Select an avatar from “Public Avatars.”
+          You can select from stock avatars or create a custom avatar. Select an avatar from  <strong>Public Avatars</strong>.
 			
 			<p class="warning">
 			<span class="material-icons">flag</span>
-			Custom avatars may incur an additional subscription fee.
+			Custom avatars may incur an  <strong>additional</strong> subscription fee.
 			</p>
 	
         </div>
@@ -80,11 +80,11 @@ rel="stylesheet">
       <summary class="stepTitle">Step 4: Customize Your Avatar</summary>
       <div class="stepContent">
         <div class="stepDescription">
-          Adjust voice, language, and gestures. HeyGen also lets you add lip-syncing to your scripts. 
+          Adjust voice, language, and gestures.  <strong>HeyGen</strong> also lets you add lip-syncing to your scripts. 
           Preview your avatar to make sure it matches your needs.
 			
 			<p class="warning"> <span class="material-icons">flag</span>
-			Ensure the voice matches the avatar to avoid the "uncanny valley" effect.
+			Ensure the voice matches the avatar to avoid the  <strong>"uncanny valley"</strong> effect.
 			</p>
 			
         </div>
@@ -98,11 +98,11 @@ rel="stylesheet">
       <summary class="stepTitle">Step 5: Generate</summary>
       <div class="stepContent">
         <div class="stepDescription">
-          Click “Generate” to produce your avatar. You can now use it in HeyGen video projects or export it for use in other platforms.
+          Click  <strong>Generate</strong> to produce your avatar. You can now use it in  <strong>HeyGen</strong> video projects or export it for use in other platforms.
 			
 			<p class="warning">
 			<span class="material-icons">flag</span>
-			Ensure you have saved your avatar correctly.
+			Ensure you have  <strong>saved</strong> your avatar correctly.
 			</p>
 
         </div>
@@ -117,11 +117,11 @@ rel="stylesheet">
       <div class="stepContent">
         <div class="stepDescription">
           <ol>
-    <li>Open HeyGen.</li>
-    <li>Go to “Avatars”.</li>
+    <li>Open  <strong>HeyGen</strong>.</li>
+    <li>Go to  <strong>Avatars</strong>.</li>
     <li>Choose an avatar.</li>
     <li>Customize voice and gestures.</li>
-    <li>Click Generate.</li>
+    <li>Click  <strong>Generate</strong>.</li>
   </ol>
 						
         </div>
