--- a/IST541/Lab2/index.html
+++ b/IST541/Lab2/index.html
@@ -1,38 +1,33 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Lab 2: Chunking Content in a Job Aid with <strong>HeyGen</strong></title>
-			
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-rel="stylesheet">
-	
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-<link href="css/jobaid.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Lab 2: Chunking Content in a Job Aid with HeyGen</title>
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+  <link href="css/jobaid.css" rel="stylesheet">
 </head>
 
 <body>
   <div id="wrapper">
-
     <div id="header">
       <h1>How to Create an Avatar in <strong>HeyGen</strong></h1>
       <h2>By Ross Hayduk</h2>
     </div>
 
-    <details open>
-      <summary class="stepTitle">Step 1: Open  <strong>HeyGen</strong></summary>
+    <details class="step" open>
+      <summary class="stepTitle">Step 1: Open <strong>HeyGen</strong></summary>
       <div class="stepContent">
         <div class="stepDescription">
-          Go to <a href="https://www.heygen.com" target="_blank" style="color:#fff; text-decoration: underline;">HeyGen.com</a> 
-          and log in with your account. If you <strong>don't</strong> have one, sign up for  <strong>FREE</strong> to get started.
-			
-			<p class="warning">
-			<span class="material-icons">flag</span>
-			Note:  Free accounts have <strong>limited</strong> capabilities.
-			</p>
-			
+          Go to <a href="https://www.heygen.com" target="_blank" style="color:#fff; text-decoration: underline;">HeyGen.com</a>
+          and log in with your account. If you <strong>don't</strong> have one, sign up for <strong>FREE</strong> to get started.
+          <p class="warning">
+            <span class="material-icons">flag</span>
+            Note: Free accounts have <strong>limited</strong> capabilities.
+          </p>
         </div>
         <div class="stepImage">
           <img src="img/step1.png" alt="Opening HeyGen homepage." />
@@ -40,17 +35,15 @@ rel="stylesheet">
       </div>
     </details>
 
-	<details open>      
-	<summary class="stepTitle">Step 2: Navigate to Avatar Creation</summary>
+    <details class="step">
+      <summary class="stepTitle">Step 2: Navigate to Avatar Creation</summary>
       <div class="stepContent">
         <div class="stepDescription">
-          Once logged in, click on the  <strong>Avatars</strong> tab in the main menu. This will take you to the avatar creation dashboard.
-			
-			<p class="warning">
-			<span class="material-icons">flag</span>
-			Observe how many  <strong>different</strong> types of avatars are available, from UGC (User Generated Content) to Pixar Studios-style avatars.
-			</p>
-
+          Once logged in, click on the <strong>Avatars</strong> tab in the main menu. This will take you to the avatar creation dashboard.
+          <p class="warning">
+            <span class="material-icons">flag</span>
+            Observe how many <strong>different</strong> types of avatars are available, from UGC to Pixar-style avatars.
+          </p>
         </div>
         <div class="stepImage">
           <img src="img/step2.png" alt="Avatar creation menu." />
@@ -58,17 +51,15 @@ rel="stylesheet">
       </div>
     </details>
 
-	<details open>      
+    <details class="step">
       <summary class="stepTitle">Step 3: Choose Your Avatar Type</summary>
       <div class="stepContent">
         <div class="stepDescription">
-          You can select from stock avatars or create a custom avatar. Select an avatar from  <strong>Public Avatars</strong>.
-			
-			<p class="warning">
-			<span class="material-icons">flag</span>
-			Custom avatars may incur an  <strong>additional</strong> subscription fee.
-			</p>
-	
+          You can select from stock avatars or create a custom avatar. Select an avatar from <strong>Public Avatars</strong>.
+          <p class="warning">
+            <span class="material-icons">flag</span>
+            Custom avatars may incur an <strong>additional</strong> subscription fee.
+          </p>
         </div>
         <div class="stepImage">
           <img src="img/step3.png" alt="Selecting avatar type." />
@@ -76,17 +67,16 @@ rel="stylesheet">
       </div>
     </details>
 
-	<details open>      
+    <details class="step">
       <summary class="stepTitle">Step 4: Customize Your Avatar</summary>
       <div class="stepContent">
         <div class="stepDescription">
-          Adjust voice, language, and gestures.  <strong>HeyGen</strong> also lets you add lip-syncing to your scripts. 
+          Adjust voice, language, and gestures. <strong>HeyGen</strong> also lets you add lip-syncing to your scripts.
           Preview your avatar to make sure it matches your needs.
-			
-			<p class="warning"> <span class="material-icons">flag</span>
-			Ensure the voice matches the avatar to avoid the  <strong>"uncanny valley"</strong> effect.
-			</p>
-			
+          <p class="warning">
+            <span class="material-icons">flag</span>
+            Ensure the voice matches the avatar to avoid the <strong>"uncanny valley"</strong> effect.
+          </p>
         </div>
         <div class="stepImage">
           <img src="img/step4.png" alt="Customizing avatar settings." />
@@ -94,17 +84,15 @@ rel="stylesheet">
       </div>
     </details>
 
-	<details open>      
+    <details class="step">
       <summary class="stepTitle">Step 5: Generate</summary>
       <div class="stepContent">
         <div class="stepDescription">
-          Click  <strong>Generate</strong> to produce your avatar. You can now use it in  <strong>HeyGen</strong> video projects or export it for use in other platforms.
-			
-			<p class="warning">
-			<span class="material-icons">flag</span>
-			Ensure you have  <strong>saved</strong> your avatar correctly.
-			</p>
-
+          Click <strong>Generate</strong> to produce your avatar. You can now use it in <strong>HeyGen</strong> video projects or export it for other platforms.
+          <p class="warning">
+            <span class="material-icons">flag</span>
+            Ensure you have <strong>saved</strong> your avatar correctly.
+          </p>
         </div>
         <div class="stepImage">
           <img src="img/step5.png" alt="Generating the final avatar." />
@@ -112,25 +100,35 @@ rel="stylesheet">
       </div>
     </details>
 
-	<details open>      
+    <details class="step">
       <summary class="stepTitle">Now, Review the Five Steps</summary>
       <div class="stepContent">
         <div class="stepDescription">
           <ol>
-    <li>Open  <strong>HeyGen</strong>.</li>
-    <li>Go to  <strong>Avatars</strong>.</li>
-    <li>Choose an avatar.</li>
-    <li>Customize voice and gestures.</li>
-    <li>Click  <strong>Generate</strong>.</li>
-  </ol>
-						
+            <li>Open <strong>HeyGen</strong>.</li>
+            <li>Go to <strong>Avatars</strong>.</li>
+            <li>Choose an avatar.</li>
+            <li>Customize voice and gestures.</li>
+            <li>Click <strong>Generate</strong>.</li>
+          </ol>
         </div>
         <div class="stepImage">
-          <img src="img/HeyGen_Logo_Prism_Black.svg" alt="HeyGen Logo"/>
+          <img src="img/HeyGen_Logo_Prism_Black.svg" alt="HeyGen Logo" />
         </div>
       </div>
     </details>
-	  
-  </div><!--wrapper-->
+  </div><!-- /wrapper -->
+
+  <script>
+    // Close other sections whenever one opens
+    document.querySelectorAll("details.step").forEach(detail => {
+      detail.addEventListener("toggle", () => {
+        if (!detail.open) return; // only act when opening
+        document.querySelectorAll("details.step[open]").forEach(other => {
+          if (other !== detail) other.open = false; // close the rest
+        });
+      });
+    });
+  </script>
 </body>
 </html>
