--- a/IST541/Lab2/index.html
+++ b/IST541/Lab2/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lab 2: Chunking Content in a Job Aid with HeyGen</title>
 
+  <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+
+  <!-- Styles -->
   <link href="css/jobaid.css" rel="stylesheet">
 </head>
 
@@ -22,11 +26,14 @@
       <summary class="stepTitle">Step 1: Open <strong>HeyGen</strong></summary>
       <div class="stepContent">
         <div class="stepDescription">
-          Go to <a href="https://www.heygen.com" target="_blank" style="color:#fff; text-decoration: underline;">HeyGen.com</a>
+          Go to
+          <a href="https://www.heygen.com" target="_blank" rel="noopener noreferrer"
+             style="color:#fff; text-decoration: underline;">HeyGen.com</a>
           and log in with your account. If you <strong>don't</strong> have one, sign up for <strong>FREE</strong> to get started.
-          <p class="warning">
-            <span class="material-icons">flag</span>
-            Note: Free accounts have <strong>limited</strong> capabilities.
+
+          <p class="warning" role="note">
+            <span class="material-icons" aria-hidden="true">flag</span>
+            <span><strong>Note:</strong> Free accounts have limited capabilities.</span>
           </p>
         </div>
         <div class="stepImage">
@@ -39,10 +46,11 @@
       <summary class="stepTitle">Step 2: Navigate to Avatar Creation</summary>
       <div class="stepContent">
         <div class="stepDescription">
-          Once logged in, click on the <strong>Avatars</strong> tab in the main menu. This will take you to the avatar creation dashboard.
-          <p class="warning">
-            <span class="material-icons">flag</span>
-            Observe how many <strong>different</strong> types of avatars are available, from UGC to Pixar-style avatars.
+          Once logged in, click the <strong>Avatars</strong> tab in the main menu. This opens the avatar creation dashboard.
+
+          <p class="warning" role="note">
+            <span class="material-icons" aria-hidden="true">flag</span>
+            <span>Explore the different avatar categories, from UGC to studio-style characters.</span>
           </p>
         </div>
         <div class="stepImage">
@@ -55,10 +63,11 @@
       <summary class="stepTitle">Step 3: Choose Your Avatar Type</summary>
       <div class="stepContent">
         <div class="stepDescription">
-          You can select from stock avatars or create a custom avatar. Select an avatar from <strong>Public Avatars</strong>.
-          <p class="warning">
-            <span class="material-icons">flag</span>
-            Custom avatars may incur an <strong>additional</strong> subscription fee.
+          You can select a stock avatar or create a custom avatar. Start with <strong>Public Avatars</strong>.
+
+          <p class="warning" role="note">
+            <span class="material-icons" aria-hidden="true">flag</span>
+            <span>Custom avatars may require an additional subscription.</span>
           </p>
         </div>
         <div class="stepImage">
@@ -71,11 +80,11 @@
       <summary class="stepTitle">Step 4: Customize Your Avatar</summary>
       <div class="stepContent">
         <div class="stepDescription">
-          Adjust voice, language, and gestures. <strong>HeyGen</strong> also lets you add lip-syncing to your scripts.
-          Preview your avatar to make sure it matches your needs.
-          <p class="warning">
-            <span class="material-icons">flag</span>
-            Ensure the voice matches the avatar to avoid the <strong>"uncanny valley"</strong> effect.
+          Adjust voice, language, and gestures. <strong>HeyGen</strong> supports lip-sync for scripts. Preview before saving.
+
+          <p class="warning" role="note">
+            <span class="material-icons" aria-hidden="true">flag</span>
+            <span>Match the voice to the character to avoid the “uncanny valley” effect.</span>
           </p>
         </div>
         <div class="stepImage">
@@ -88,10 +97,11 @@
       <summary class="stepTitle">Step 5: Generate</summary>
       <div class="stepContent">
         <div class="stepDescription">
-          Click <strong>Generate</strong> to produce your avatar. You can now use it in <strong>HeyGen</strong> video projects or export it for other platforms.
-          <p class="warning">
-            <span class="material-icons">flag</span>
-            Ensure you have <strong>saved</strong> your avatar correctly.
+          Click <strong>Generate</strong> to produce your avatar. Use it in <strong>HeyGen</strong> projects or export it.
+
+          <p class="success" role="note">
+            <span class="material-icons" aria-hidden="true">check_circle</span>
+            <span><strong>Saved:</strong> Your avatar is ready for use.</span>
           </p>
         </div>
         <div class="stepImage">
@@ -111,6 +121,11 @@
             <li>Customize voice and gestures.</li>
             <li>Click <strong>Generate</strong>.</li>
           </ol>
+
+          <p class="success" role="note">
+            <span class="material-icons" aria-hidden="true">check_circle</span>
+            <span><strong>Great work!</strong> You’re on your way to mastering <strong>HeyGen</strong>.</span>
+          </p>
         </div>
         <div class="stepImage">
           <img src="img/HeyGen_Logo_Prism_Black.svg" alt="HeyGen Logo" />
@@ -119,13 +134,13 @@
     </details>
   </div><!-- /wrapper -->
 
+  <!-- Accordion behavior: opening one <details> closes the others -->
   <script>
-    // Close other sections whenever one opens
     document.querySelectorAll("details.step").forEach(detail => {
       detail.addEventListener("toggle", () => {
-        if (!detail.open) return; // only act when opening
+        if (!detail.open) return;
         document.querySelectorAll("details.step[open]").forEach(other => {
-          if (other !== detail) other.open = false; // close the rest
+          if (other !== detail) other.open = false;
         });
       });
     });
