--- a/IST541/Lab3/page2.html
+++ b/IST541/Lab3/page2.html
@@ -18,14 +18,14 @@
   <div id="wrapper">
     <header id="header">
       <h1>How to Add External Content with <strong>iFrames</strong></h1>
-      <h2>Lab 3</h2>
+      <h2>An Assignment for IST 541's Lab 3</h2>
     </header>
 
     <nav class="nav">
-      <a class="btn" href="index.html">The <strong>Modality Principle</strong>in Online Learning</a>
-      <a class="btn" href="page2.html">Using <strong>HeyGen</strong>at CSUMB's MIST Program</a>
+      <a class="btn" href="index.html">The <strong>Modality Principle</strong> in Online Learning</a>
+      <a class="btn" href="page2.html">Using <strong>HeyGen</strong> at CSUMB's MIST Program</a>
       <a class="btn" href="page3.html">Creating A <strong>HeyGen</strong> "Digital Twin"</a>
-      <a class="btn" href="page4.html">Using the <strong>HeyGen</strong>Translation Technology</a>
+      <a class="btn" href="page4.html">Using the <strong>HeyGen</strong> Translation Technology</a>
     </nav>
 
     <main class="card">
