--- a/IST541/Lab2a/index.html
+++ b/IST541/Lab2a/index.html
@@ -24,10 +24,8 @@
 
 	<div id="header">
 		
-		<iframe width="560" height="315" src=https://haydukross.github.io/IST541/Lab3/page4.html title="External iFrames Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		
-      <h1>How to Create an Avatar in <strong>HeyGen</strong></h1>
-      <h2>By Ross Hayduk</h2>
+		<iframe src=https://haydukross.github.io/IST541/Lab3/page4.html title="External iFrames Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
     </div>
 	  
 	  
