--- a/IST541/Lab2a/index.html
+++ b/IST541/Lab2a/index.html
@@ -1,18 +1,25 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
+  <title>External iFrames Tutorial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Lab 3 Test Combining iFrames and Chunking</title>
-
-  <!-- Fonts & Icons -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-
-  <!-- Styles -->
-  <link href="css/jobaid.css" rel="stylesheet">
+  <style>
+    /* Reset margins so the iframe can truly fill the screen */
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+    /* Make the iframe fill the full viewport */
+    .fullscreen-iframe {
+      display: block;
+      width: 100%;
+      height: 100vh;   /* 100% of the viewport height */
+      border: 0;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
 
 <body>
@@ -24,7 +31,7 @@
 
 	<div id="header">
 		
-		<iframe src=https://haydukross.github.io/IST541/Lab3/page4.html title="External iFrames Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="560" height="315" src=https://haydukross.github.io/IST541/Lab3/page4.html title="External iFrames Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
     </div>
 	  
