--- a/IST541/Lab2a/index.html
+++ b/IST541/Lab2a/index.html
@@ -1,6 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
+
+<meta charset="utf-8">
+  <title>How to Create an Avatar in HeyGen</title>
+
+  <!-- Google Font (same as Lab2) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;800&display=swap" rel="stylesheet">
+
+  <!-- Your local stylesheet for Lab2a -->
+  <link href="css/site.css" rel="stylesheet">
+	
   <meta charset="utf-8" />
   <title>How to Create an Avatar in HeyGen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
